@@ -1,5 +1,8 @@
 /*
  * $Log: pidopen.h,v $
+ * Revision 1.2  2021-06-15 21:50:44+05:30  Cprogrammer
+ * added tmpdir argument to pidfmt(), pidopen()
+ *
  * Revision 1.1  2021-06-12 18:18:11+05:30  Cprogrammer
  * Initial revision
  *
@@ -9,12 +12,13 @@
 #include <datetime.h>
 
 #ifndef	lint
-static char     sccsidpidopenh[] = "$Id: pidopen.h,v 1.1 2021-06-12 18:18:11+05:30 Cprogrammer Exp mbhangui $";
+static char     sccsidpidopenh[] = "$Id: pidopen.h,v 1.2 2021-06-15 21:50:44+05:30 Cprogrammer Exp mbhangui $";
 #endif
 
 extern char    *pidfn;
 extern int      messfd;
 
-int             pidopen(datetime_sec);
+int             pidopen(datetime_sec, char *);
+unsigned int    pidfmt(char *, unsigned long, datetime_sec, char *);
 
 #endif
